More cleanup, e-mail sending enable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,9 @@
         "riday",
         "ueday",
         "unday"
-    ]
+    ],
+    "files.watcherExclude": {
+        "**/tmp/**": true,
+        "**/vendor/**": true
+    }
 }
