Add help system back, upgrade datebox, cleanup some stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,6 @@
     "files.watcherExclude": {
         "**/tmp/**": true,
         "**/vendor/**": true
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
