--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,21 @@
 {
     "cSpell.words": [
-        "assed",
         "bootcheck",
-        "changepass",
         "chronos",
-        "datasource",
-        "minlength",
-        "myjobs",
-        "mysched",
-        "safeedit",
-        "sched",
-        "trac"
+        "obby"
     ],
     "cSpell.ignoreWords": [
         "aturday",
+        "datasource",
         "ednesday",
         "hursday",
+        "mailloc",
+        "myjobs",
+        "mysched",
         "onday",
         "ooooood",
         "riday",
+        "sched",
         "ueday",
         "unday"
     ],
