Favicon, logo, pdf docs

--- a/.gitattributes
+++ b/.gitattributes
@@ -35,3 +35,9 @@
 *.pdf binary
 *.phar binary
 *.ttf binary
+*.eot binary
+*.woff binary
+*.woff2 binary
+*.idml binary
+*.indd binary
+*.ttc binary
